2003-09-29  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-wrapper.c, cong-command-history.c, cong-command.c, cong-command.h, cong-document.c, cong-document.h, global.h

	More work on undo/redo
	
	* cong-modification.h, cong-modification.c, cong-node-modification-add-after.c, cong-node-modification-add-after.h, cong-node-modification-add-before.c, cong-node-modification-add-before.h, cong-node-modification-make-orphan.c, cong-node-modification-make-orphan.h, cong-node-modification-remove-attribute.c, cong-node-modification-remove-attribute.h, cong-node-modification-set-attribute.c, cong-node-modification-set-attribute.h, cong-node-modification-set-parent.c, cong-node-modification-set-parent.h, cong-node-modification-set-text.c, cong-node-modification-set-text.h, cong-node-modification.c, cong-node-modification.h, Makefile.am

	New files, implementing the atomic modifications that make up commands

	* Makefile.am, cong-document.c, cong-document.h, cong-menus.c

	Basic wiring of undo/redo into the GUI with a test hook/hack

	* cong-command.h, cong-command.c, cong-command-history.h, cong-command-history.c

	New files: beginnings of undo/redo framework

	* plugin-lists-area-listitem.c, plugin-lists-area-listitem.h

	Added set_label method

	* xmledit.c

	Removed dead code from clipboard functions

	* cong-document.c, cong-location.c, cong-node.c, cong-node.h, cursor.c, xmldata.c

	Added function to determine valid cursor locations (prior to adding comment editing support)

	* cong-dispspec.c, cong-dispspec.h, cong-editor-node-text.c, cong-node.c, cong-node.h, global.h, plugin-cleanup-source.c

	Added whitespace attribute to dispspec elements, made Cleanup Source respect it, made beginnings of support in main editor view

2003-09-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* tree.c

	Removed redundant whitespace nodes that were added when adding new structural elements
